# sym_gr

./: .gitignore  HANDOFF.md  README.md  app.py  pyproject.toml  requirements.txt
core/: __init__.py  ansatz.py  connection.py  constraints.py  derivation.py  spacetime.py  system.py  tensors.py
docs/: connections.md  presets.md  references.md
examples/: minkowski.py  schwarzschild.py
tests/: test_tensors.py
ui/: ansatz_steps.py  connection_config.py  constraint_steps.py  coord_config.py  display.py  drill_down.py  efe_config.py  export.py  metric_grid.py  parse.py
